# discord-ctf-remind-bot

./: .gitignore  README.md  config.py  ctftime_api.py  database.py  main.py  new_main.py  pyproject.toml  requirements.txt
cogs/: ctf.py  reminder.py  settings.py  utils.py
